--- a/index.ipynb
+++ b/index.ipynb
@@ -2090,7 +2090,7 @@
    "outputs": [],
    "source": [
     "area_values = None\n",
-    "area_Values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
+    "area_Values = [cities[0]['Area'], cities[1]['Population'], cities[2]['Population']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
